[gd_scene load_steps=4 format=3 uid="uid://bl6d0jydxesr0"]

[ext_resource type="Script" path="res://mole.gd" id="1_u0m82"]
[ext_resource type="Texture2D" uid="uid://dk1s3ryjq1ddk" path="res://Mole mini art.png" id="1_wsl7y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d038j"]
size = Vector2(8, 11)

[node name="Mole" type="Area2D"]
script = ExtResource("1_u0m82")

[node name="MoleSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_wsl7y")
region_enabled = true
region_rect = Rect2(16, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_d038j")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
